# crotale

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: check_dependency.cmake
examples/: CMakeLists.txt  gamedev_basics.cpp  utils_basics.cpp
